--- a/payroll/src/main/resources/application.properties
+++ b/payroll/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+
+SERVICE.SECRET=2934u293423982347
