add service and repository testing

--- a/payroll/src/main/resources/application-test.properties
+++ b/payroll/src/main/resources/application-test.properties
@@ -16,7 +16,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # Hibernate is a java framework and ORM (Object Relation Mapping)
 # tool that is used to provide the implementation of the JPA methods.
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 SERVICE.SECRET=2934u293423982347
